# spell-monad

./: .gitignore  .gitmodules  Makefile  README.md  bsdtar-wasm.nix  cabal.project  cabal.project.freeze  copy-cabal-libs.sh  flake.nix  package-lock.json  package.json  rsbuild.config.js  shell.nix  spell-monad.cabal  tsconfig.json  zstd-wasm.nix
.github/workflows/: deploy.yml
app/: App.hs  GameData.hs  Input.hs  LogClock.hs  Main.hs  Orphans.hs  Simulation.hs
app/App/: Thread.hs  UI.hs
app/App/UI/: GameScreen.hs  MainMenu.hs
app/App/UI/GameScreen/: Haskeline.hs  TerminalEmulator.hs
app/Simulation/: Input.hs
coroutine-afrp/bearriver/: coroutine-bearriver.cabal
coroutine-afrp/bearriver/src/FRP/BearRiver/: Switches.hs
coroutine-afrp/dunai/: README.md  coroutine-dunai.cabal
coroutine-afrp/dunai/src/Control/Monad/Trans/MSF/: Except.hs
coroutine-afrp/dunai/src/Data/MonadicStreamFunction/: Core.hs  InternalCore.hs  Util.hs
coroutine-afrp/dunai/src/Data/MonadicStreamFunction/Instances/: Additive.hs
demos/: EvalUntrusted.hs  TerminalDemo.hs  TerminalDemoWithRepl.hs
examples/: Level1.hs  Level2.hs  Level3.hs  Level4.hs  Level5.hs  Level6.hs
spell/: Spell.hs
spell/Prelude/: Spell.hs
spell/Spell/: Exception.hs  IO.hs
src/: DependentSums.hs  Game.hs  Input.hs  Run.hs  Simulation.hs  Spell.hs  Untrusted.hs
src/App/: Thread.hs
src/App/Thread/: Game.hs  Repl.hs  SF.hs
src/App/UI/: GameScreen.hs  LoadingScreen.hs  MainMenu.hs
src/App/UI/GameScreen/: Terminal.hs
src/Prelude/: Spell.hs
src/Simulation/: Component.hs  Coordinates.hs  Input.hs  Objects.hs  Util.hs
src/Simulation/Objects/: All.hs  Firebolts.hs  Geometry.hs  Gravity.hs  Player.hs  SpellInterpreter.hs  TargetSelector.hs  Terrain.hs
src/Simulation/Objects/Geometry/: Hitbox.hs
src/Simulation/Objects/Player/: Types.hs
src/Simulation/Objects/SpellInterpreter/: Types.hs
src/Spell/: Eval.hs  Exception.hs
test/: Main.hs
www/: Game.ts  GameViewport.ts  RootfsExtractor.mjs  RootfsExtractor.ts  index.css  index.mjs  rootfs_extractor.mjs
www/RootfsExtractor/: worker.mjs
