cabal-version:      3.4
name:               spell-monad
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC==9.8.4
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Spell
                    , Spell.Exception
                    , Prelude.Spell
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , exceptions
                    , free
                    , mtl
                    , transformers
    hs-source-dirs:   src
    default-language: GHC2021

executable spell-monad-exe
    import:           warnings
    default-language: GHC2021
    main-is:          Main.hs
    other-modules:    App.UI.MainMenu
                    , App.UI.GameScreen
                    , App.Thread
                    , Input
                    , Simulation
                    , Simulation.Input
    hs-source-dirs:   app
    default-extensions:
        Arrows
        TypeFamilies
        DataKinds
    ghc-options: -threaded
    build-depends:    base
                    , spell-monad
                    , async
                    , bearriver ^>= 0.15
                    , brick
                    , bytestring
                    , containers
                    , data-clist
                    , directory
                    , dunai
                    , filepath
                    , free
                    , hint
                    , lens
                    , linear
                    , logging-effect
                    , monad-schedule
                    , mtl
                    , mmorph
                    , prettyprinter
                    , profunctors
                    , transformers
                    , some
                    , stm
                    , text
                    , text-show
                    , time
                    , unliftio
                    , vector
                    , vector-sized
                    , vty
                    , vty-crossplatform

test-suite spell-monad-test
    import:           warnings
    default-language: GHC2021
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base
                    , containers
                    , spell-monad
                    , ansi-terminal
                    , free
                    , hint
                    , mtl
                    , transformers
