cabal-version:      3.4
name:               spell-monad
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC==9.8.4
-- extra-source-files:

common warnings
    ghc-options: -Wall

library spell
    import:           warnings
    exposed-modules:  Spell
                    , Spell.Exception
                    , Spell.IO
                    , Prelude.Spell
    hs-source-dirs:   spell
    build-depends:    base
                    , free
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:  App.UI.MainMenu
                    , App.UI.GameScreen
                    , App.UI.GameScreen.Terminal
                    , App.Thread
                    , App.Thread.Repl
                    , Input
                    , Simulation
                    , Simulation.Input
    default-extensions:
        Arrows
        TypeFamilies
        DataKinds
    build-depends:    base
                    , spell-monad:spell
                    , async
                    , bearriver ^>= 0.15
                    , brick
                    , bytestring
                    , containers
                    , data-clist
                    , deepseq
                    , directory
                    , dunai
                    , effectful
                    , filepath
                    , free
                    , hint
                    , lens
                    , linear
                    , logging-effect
                    , monad-schedule
                    , mtl
                    , mmorph
                    , parallel
                    , prettyprinter
                    , profunctors
                    , transformers
                    , some
                    , stm
                    , text
                    , text-show
                    , time
                    , unliftio
                    , vector
                    , vector-sized
                    , vty
                    , vty-crossplatform

    hs-source-dirs:   src
    default-language: GHC2021

executable spell-monad-exe
    import:           warnings
    default-language: GHC2021
    main-is:          Main.hs
    other-modules:   
    hs-source-dirs:   app
    ghc-options: -threaded
    build-depends:    base
                    , spell-monad
                    , async
                    , mtl
                    , stm

executable terminal-demo
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   demos
    main-is:          TerminalDemo.hs
    build-depends:    base
                    , spell-monad
                    , brick
                    , lens
                    , stm
                    , vty
    ghc-options: -threaded

executable terminal-demo-with-repl
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   demos
    main-is:          TerminalDemoWithRepl.hs
    build-depends:    base
                    , spell-monad
                    , spell-monad:spell
                    , async
                    , brick
                    , containers
                    , free
                    , lens
                    , mmorph
                    , mtl
                    , stm
                    , text
                    , transformers
                    , vty
    ghc-options: -threaded
