cabal-version:      3.4
name:               spell-monad
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    README.md
tested-with:        GHC==9.8.4
-- extra-source-files:

common warnings
    ghc-options: -Wall

library spell
    import:           warnings
    exposed-modules:  Spell
                    , Spell.Exception
                    , Spell.IO
                    , Prelude.Spell
    hs-source-dirs:   spell
    build-depends:    base
                    , free
                    , transformers
    default-language: GHC2021
    -- If we have a non-allocating loop with -fomit-yields, some pure expressions
    -- like last (repeat 0) cannot be interrupted. In fact, they starve out other
    -- threads entirely, preventing anything from running. This is bad with
    -- arbitrary user-submitted code. The solution is to not let the user run
    -- anything that gets optimised into an infinite non-allocating loop, by
    -- disabling the optimisation with -fno-omit-yields.
    --
    -- But just specifying this in cabal.project for all packages will not work:
    -- the standard library is compiled with -fno-omit-yields. Since it's a boot
    -- library (included with the compiler), we cannot recompile it with a
    -- different set of flags.
    --
    -- So we instead have to go with a different solution: we compile only the
    -- library we expose to the user with -fno-omit-yields, and redefine any
    -- "dangerous" functions that might not terminate ourselves. This also means
    -- that we get to keep the optimisation for everything but user-written code.
    --
    -- TODO: possibly just copy all of the standard Prelude verbatim
    ghc-options: -fno-omit-yields

library
    import:           warnings
    exposed-modules:  App.UI.MainMenu
                    , App.UI.GameScreen
                    , App.UI.GameScreen.Terminal
                    , App.UI.LoadingScreen
                    , App.Thread
                    , App.Thread.Repl
                    , App.Thread.SF
                    , DependentSums
                    , Input
                    , Simulation
                    , Simulation.Input
                    , Spell.Eval
                    , Untrusted
    default-extensions:
        Arrows
        TypeFamilies
        DataKinds
    build-depends:    base
                    , spell-monad:spell
                    , async
                    , bearriver ^>= 0.15
                    , brick
                    , bytestring
                    , containers
                    , data-clist
                    , deepseq
                    , dunai
                    , effectful
                    , free
                    , hint
                    , lens
                    , mtl
                    , parallel
                    , profunctors
                    , transformers
                    , some
                    , stm
                    , text
                    , time
                    , vector
                    , vty
                    , vty-crossplatform

    hs-source-dirs:   src
    default-language: GHC2021

executable spell-monad-exe
    import:           warnings
    default-language: GHC2021
    main-is:          Main.hs
    other-modules:   
    hs-source-dirs:   app
    ghc-options: -threaded
    build-depends:    base
                    , spell-monad
                    , async
                    , mtl
                    , stm
                    , these

executable terminal-demo
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   demos
    main-is:          TerminalDemo.hs
    build-depends:    base
                    , spell-monad
                    , brick
                    , lens
                    , stm
                    , vty
    ghc-options: -threaded

executable terminal-demo-with-repl
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   demos
    main-is:          TerminalDemoWithRepl.hs
    build-depends:    base
                    , spell-monad
                    , spell-monad:spell
                    , async
                    , brick
                    , containers
                    , free
                    , lens
                    , mtl
                    , stm
                    , text
                    , transformers
                    , vty
    ghc-options: -threaded
